[metadata]
name = cuckoofilter
version = 0.1
author = Michael The
url = https://github.com/michael-the1/cuckoofilter.py
description = A Cuckoo filter implementation
long_description = file: README.md
keywords = cuckoo, filter
license = MIT
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: MIT
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = cuckoofilter
install_requires =
	mmh3
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
